# obstaclerunner

./: Cargo.toml  README.md  index.html  obstaclerunner-24865e3b26d6691d.js  styles.css
.github/workflows/: release-pages.yaml
assets/: enemies.yaml  player.yaml
src/: animation.rs  input.rs  main.rs  model.rs  physics.rs  ui.rs
src/entities/: character.rs  enemy.rs  mod.rs  player.rs
src/ui/: main_menu.rs  mod.rs
