[package]
name = "obstaclerunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1", features = ["wayland"] }
bevy-inspector-egui = "0.23.4"
bevy_rapier2d = { version = "0.25.0", features = ["wasm-bindgen"] }
leafwing-input-manager = "0.13.3"
rand = "0.8.5"
