[package]
name = "obstaclerunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1", features = ["wayland"] }
bevy-inspector-egui = "0.23.4"
bevy_common_assets = { version = "0.10.0", features = ["yaml"] }
bevy_rapier2d = { version = "0.25.0", features = ["wasm-bindgen", "serde", "serde-serialize"] }
leafwing-input-manager = "0.13.3"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
